# Patterns_Rust_PHP_TypeScript

./: .gitignore  README.md  S.O.L.I.D.ppt  ServiceLocator.php  Агрегация_Композиция
php/UnitOfWorks/: UOW.sqlite  composer.json  index.php
php/adapter/: index.php
php/bridge/: Bridge.php
php/command/: index.php
php/decorator/: index.php
php/fabrica/: index.php
php/facade/: index.php
php/iterator/: index.php
php/lazyLoad/: LazyLoad.php
php/observer/: index.php
php/repository/: composer.json  index.php  другой вариант Repository Хранилище и DataMappers отображение.php
php/repository/app/: DatabaseAdapterInterface.php  User.php  UserCollection.php  UserCollectionInterface.php  UserInterface.php  UserMapper.php  UserMapperInterface.php  UserRepository.php  UserRepositoryInterface.php
php/repository_dataMapper_identityMap/: README.md  autoload.php
php/repository_dataMapper_identityMap/example/: DataMapper.php  IdentityMap.php  Repository.php  datamapper.db
php/singleton/: index.php
php/state/: index.php
php/strategy/: index.php
php/template_method/: index.php
rust/adapter/: Cargo.toml
rust/command/: Cargo.toml
rust/decorator/: Cargo.toml
rust/fabrica/: Cargo.toml
rust/facade/: Cargo.toml
rust/iterator/: Cargo.toml
rust/most/: Cargo.toml
rust/observer/: Cargo.toml
rust/singleton/: Cargo.toml
rust/singleton/src/: atomics.rs  lazy_static.rs  main.rs  once_cell.rs
rust/state/: Cargo.toml
rust/strategy/: Cargo.toml
rust/template_method/: Cargo.toml
typescript/iterator/: package.json
typescript/observer/: tsconfig.json
(+53 files in other folders)
